--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,18 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-aspects</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents.client5</groupId>
+			<artifactId>httpclient5</artifactId>
+			<version>5.1.3</version>
+		</dependency><dependency>
+			<groupId>org.apache.httpcomponents.client5</groupId>
+			<artifactId>httpclient5-fluent</artifactId>
+			<version>5.0.3</version>
+		</dependency>
+
+<!-- Thanks for using https://jar-download.com -->
+
 	</dependencies>
 
 	<build>
