--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 server.port=8080
+
+#curl -X POST http://example.com/api/dogs -H "Content-Type: application/json" -d '{"age": 3, "name": "posted using curl"}' 
