config class added to read from environment

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,11 @@
 server.port=8080
+backend_host=ip_address_of_host_or_domain
+backend_port=8080
+backend_protocol=http
+
+proxy_host=""
+proxy_port=8080
+proxy_protocol=http
+
 
 #curl -X POST http://example.com/api/dogs -H "Content-Type: application/json" -d '{"age": 3, "name": "posted using curl"}' 
