--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8080
-backend_host=ip_address_of_host_or_domain
+backend_host=ipaddressofhostordomain.com
 backend_port=8080
 backend_protocol=http
 
